--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,5 +12,10 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+
+		<p>
+			Here's a link to the Blog page:
+			<a href="/blog">Blog</a>
+		</p>
 	</body>
 </html>
