--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import '../themes/main-theme.css';
 ---
 
 <html lang="en">
@@ -9,7 +9,6 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Almost A Physicist</title>
-		<link rel="stylesheet" href="/src/themes/main-theme.css" />
 	</head>
 	<body>
 		<main>
